[tool.poetry]
name = "blaise-log-investigation"
version = "0.1.0"
description = "A small project for digging into log queries"
authors = ["Blaise Team"]
readme = "README.md"
packages = [{include = "blaise_log_investigation"}]
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
notebook = "^7.4.7"
pandas = "^2.0.1"
google-cloud-logging = "^3.12.1"
jupyter = "^1.1.1"
matplotlib = "^3.7.1"
grpcio = "^1.70.0"
protobuf = ">=4.25.8"
requests = "^2.32.4"
urllib3 = "2.5.0"
tornado = "^6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
