[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[project]
name = "blaise-log-investigation-tools"
version = "0.0.0"
requires-python = ">=3.13,<4.0"
dependencies = [
    "notebook>=7.6.0",
    "pandas>=3.0.3",
    "google-cloud-logging (>=3.16.1)",
    "google-auth (>=2.56.0)",
    "matplotlib (>=3.11.1)",
]

[dependency-groups]
dev = [
    "ruff (>=0.15.22)",
    "pytest (>=9.1.1)",
    "pytest-cov (>=7.1.0)",
    "pyright (>=1.1.411)",
    "deptry (>=0.25.1,<0.26.0)",
    "vulture (>=2.16,<3.0)",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "C90", "SIM", "RUF", "Q"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["notebooks"]
typeCheckingMode = "strict"
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.vulture]
min_confidence = 70

[tool.deptry]
known_first_party = ["helpers"]
ignore = ["DEP002"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.report]
omit = ["tests/*"]
